--- a/BluetoothScanner/app/src/main/AndroidManifest.xml
+++ b/BluetoothScanner/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".ListActivity"
+            android:name="com.tutsplus.matt.bluetoothscanner.ListActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
